Tue Apr 30 22:17:27 2002                        Michael Jennings (mej)

I really should be more careful when creating test cases.  This
should fix the parsing of boolean options with values.
----------------------------------------------------------------------
Wed May  1 23:21:23 2002                        Michael Jennings (mej)

Fleshed out the URL class.
----------------------------------------------------------------------
Tue May  7 16:37:40 2002                        Michael Jennings (mej)

A few small bugfixes and some touchups.  Also work on the socket
object.
----------------------------------------------------------------------
Tue May 21 00:15:37 2002                        Michael Jennings (mej)

Fixed a number of memory leaks in both the testing code and the object
classes themselves.

Also rearranged some header stuff and created a few new helper macros
for object declarations.
----------------------------------------------------------------------
Wed May 22 00:16:31 2002                        Michael Jennings (mej)

Brought the performance tests up to date and cleaned up some memory
leaks in them.
----------------------------------------------------------------------
Wed May 22 08:59:38 2002                        Michael Jennings (mej)

Stupid typo.  Doing too much perl, I guess.  cpp uses "#elif," not
"#elsif."
----------------------------------------------------------------------
Sun May 26 22:37:43 2002                        Michael Jennings (mej)

Updated performance testing to be scaled.  The default is a quicker
performance test than before, but now we can also choose to run
anywhere from scratching the surface to a very thorough pounding.
----------------------------------------------------------------------
Sun Jun  9 14:16:38 2002                        Michael Jennings (mej)

Return on failed assert.
----------------------------------------------------------------------